fixed some style on find note on string game with the tallys by removing margin to shrink them a bit to fit better on mobile

--- a/pages/guitar/noteRecognition/guitarNoteRecognition.module.css
+++ b/pages/guitar/noteRecognition/guitarNoteRecognition.module.css
@@ -45,6 +45,8 @@
     flex-direction: column;
     justify-content: center;
     font-size: 60px;
+    margin: 0%;
+
 }
 
 .green {
@@ -53,4 +55,5 @@
     flex-direction: column;
     justify-content: center;
     font-size: 60px;
+    margin: 0%;
 }
