--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,3 +53,7 @@ ul {
   font-size: x-large;
   padding: 3px;
 }
+
+h1 {
+  margin-bottom: 0%;
+}
